[package]
name = "web_crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
regex = "1.9.5"
reqwest = "0.11.20"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
